// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Current lobby 1`] = `
<article
  class="s-QQoQzhRq8NK6 lobby isCurrent"
  style="--bg-url: url('http://localhost:3001/games/undefined/catalog/cover.webp');"
>
  <button
    class="s-QQoQzhRq8NK6"
    tabindex="0"
  >
    <span
      class="title s-QQoQzhRq8NK6"
    >
      <h3
        class="s-QQoQzhRq8NK6"
      >
        Salon
      </h3>
    </span>
     
    <span
      class="created s-QQoQzhRq8NK6"
    >
      02 mai, 21:25
    </span>
     
     
  </button>
   
  <div
    class="actions s-QQoQzhRq8NK6"
  >
    <button
      class="s-NMyTiX1zi6rz"
      secondary="true"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        close
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
</article>
`;

exports[`Guests only 1`] = `
<article
  class="s-QQoQzhRq8NK6"
  style="--bg-url: url('http://localhost:3001/games/riichi/catalog/cover.webp');"
>
  <button
    class="s-QQoQzhRq8NK6"
    tabindex="0"
  >
    <span
      class="title s-QQoQzhRq8NK6"
    >
      <h3
        class="s-QQoQzhRq8NK6"
      >
        Richii Mahjong
      </h3>
    </span>
     
    <span
      class="created s-QQoQzhRq8NK6"
    >
      02 mai, 21:25
    </span>
     
     
    <span
      class="guests s-QQoQzhRq8NK6"
    >
      invités: John, Georges
    </span>
  </button>
   
  <div
    class="actions s-QQoQzhRq8NK6"
  />
</article>
`;

exports[`Invited 1`] = `
<article
  class="s-QQoQzhRq8NK6"
  style="--bg-url: url('http://localhost:3001/games/riichi/catalog/cover.webp');"
>
  <button
    class="s-QQoQzhRq8NK6"
    tabindex="0"
  >
    <span
      class="title s-QQoQzhRq8NK6"
    >
      <h3
        class="s-QQoQzhRq8NK6"
      >
        Richii Mahjong
      </h3>
    </span>
     
    <span
      class="created s-QQoQzhRq8NK6"
    >
      02 mai, 21:25
    </span>
     
    <span
      class="s-QQoQzhRq8NK6"
    >
      avec Chandra, Timothé
    </span>
     
    <span
      class="guests s-QQoQzhRq8NK6"
    >
      invités: John, Georges
    </span>
  </button>
   
  <div
    class="actions s-QQoQzhRq8NK6"
  />
</article>
`;

exports[`Lobby 1`] = `
<article
  class="s-QQoQzhRq8NK6 lobby"
  style="--bg-url: url('http://localhost:3001/games/undefined/catalog/cover.webp');"
>
  <button
    class="s-QQoQzhRq8NK6"
    tabindex="0"
  >
    <span
      class="title s-QQoQzhRq8NK6"
    >
      <h3
        class="s-QQoQzhRq8NK6"
      >
        Salon
      </h3>
    </span>
     
    <span
      class="created s-QQoQzhRq8NK6"
    >
      02 mai, 21:25
    </span>
     
     
  </button>
   
  <div
    class="actions s-QQoQzhRq8NK6"
  />
</article>
`;

exports[`Owned 1`] = `
<article
  class="s-QQoQzhRq8NK6"
  style="--bg-url: url('http://localhost:3001/games/riichi/catalog/cover.webp');"
>
  <button
    class="s-QQoQzhRq8NK6"
    tabindex="0"
  >
    <span
      class="title s-QQoQzhRq8NK6"
    >
      <h3
        class="s-QQoQzhRq8NK6"
      >
        Richii Mahjong
      </h3>
    </span>
     
    <span
      class="created s-QQoQzhRq8NK6"
    >
      02 mai, 21:25
    </span>
     
    <span
      class="s-QQoQzhRq8NK6"
    >
      avec Sarah, Timothé
    </span>
     
    <span
      class="guests s-QQoQzhRq8NK6"
    >
      invités: John, Georges
    </span>
  </button>
   
  <div
    class="actions s-QQoQzhRq8NK6"
  >
    <button
      class="s-NMyTiX1zi6rz"
      secondary="true"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        delete
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
</article>
`;

exports[`Single owned 1`] = `
<article
  class="s-QQoQzhRq8NK6"
  style="--bg-url: url('http://localhost:3001/games/riichi/catalog/cover.webp');"
>
  <button
    class="s-QQoQzhRq8NK6"
    tabindex="0"
  >
    <span
      class="title s-QQoQzhRq8NK6"
    >
      <h3
        class="s-QQoQzhRq8NK6"
      >
        Richii Mahjong
      </h3>
    </span>
     
    <span
      class="created s-QQoQzhRq8NK6"
    >
      02 mai, 21:25
    </span>
     
     
  </button>
   
  <div
    class="actions s-QQoQzhRq8NK6"
  >
    <button
      class="s-NMyTiX1zi6rz"
      secondary="true"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        delete
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </div>
</article>
`;
